--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spy Name Encryptor</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"> <!-- Futuristic font -->
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet"> <!-- Hacker-like font -->
     <style>
         body {
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Share Tech Mono', monospace; /* Use hacker-style font */
             margin: 0;
             padding: 0;
             height: 100vh;
@@ -28,7 +28,7 @@
             text-align: center;
         }
         h1 {
-            font-family: 'Orbitron', sans-serif; /* Futuristic font */
+            font-family: 'Share Tech Mono', monospace; /* Hacker-style font */
             color: #00ff00; /* Neon green color */
             margin-bottom: 30px;
             text-shadow: 0 0 20px #00ff00; /* Glowing green text effect */
