--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird Clone</title>
+    <title>Move Background and Image</title>
     <style>
         body {
-            background-repeat: no-repeat; /* Disable background repeat */
+            background-repeat: repeat;      /* Allow the background image to repeat */
+            background-size: auto;          /* Use auto for the background size to keep it repeating */
             background-image: url('https://i.ibb.co/yXNJrzG/1247160.jpg');
-            background-size: cover; /* Cover the entire background */
             text-align: center;
             font-family: Arial, sans-serif;
             padding: 20px;
-            height: 100vh; /* Makes body full height of the viewport */
-            overflow: hidden; /* Prevents scrollbar from appearing */
-            color: white; /* Sets general text color to white */
-            position: relative; /* Allows absolute positioning of the bird */
+            height: 100vh;                 /* Makes body full height of the viewport */
+            overflow: hidden;              /* Prevents scrollbar from appearing */
+            color: white;                  /* Sets general text color to white */
         }
         #myImage01 {
             position: absolute; 
             width: 100px; 
             height: 80px; 
             z-index: 10; 
-            bottom: 50px; /* Position it 50px above the bottom of the screen */
-            left: calc(50% - 50px); /* Center it horizontally; subtract half its width */
+            top: 200px;  /* Initial top position for the image */
+            left: 0;  /* Initial left position for the image */
         }
         .button-section {
             margin: 20px 0;
@@ -38,60 +37,24 @@
 </head>
 <body id="myBody">
 <script>
-    // Global variables for the bird
-    const imgElement = document.getElementById('myImage01');
-    let gravity = 0.5; // The force of gravity
-    let lift = -10; // The jump force
-    let velocity = 0; // Current velocity of the bird
-    let positionY = window.innerHeight - 50 - imgElement.clientHeight; // Initial position
-
-    // Set initial position of the bird
-    imgElement.style.bottom = `${positionY}px`;
-
-    // Jump function
-    function jump() {
-        velocity += lift; // Apply the jump force
-    }
-
-    // Update function that handles gravity and position
-    function update() {
-        velocity += gravity; // Apply gravity
-        positionY += velocity; // Update position with velocity
-
-        // Prevent the bird from going off-screen
-        if (positionY > window.innerHeight - imgElement.clientHeight - 50) {
-            positionY = window.innerHeight - imgElement.clientHeight - 50; // Keep it above bottom
-            velocity = 0; // Reset velocity if touching the ground
-        }
-
-        if (positionY < 0) {
-            positionY = 0; // Prevent it from going above the top
-            velocity = 0; // Reset velocity
-        }
-
-        // Update the bird's position
-        imgElement.style.bottom = `${positionY}px`;
-
-        // Continue the animation
-        requestAnimationFrame(update);
-    }
-
-    // Event Listener for mouse click to make the bird jump
-    document.addEventListener('click', jump);
-    
-    // Start the update loop for the bird
-    update();
-
-    // Global variables for background movement
     let myGlobalX = 0; // Global variable for background horizontal position
     let myGlobalY = 0; // Global variable for background vertical position
+    let imgGlobalX = 0; // Global variable for image horizontal position
+    let imgGlobalY = 200; // Global variable for image vertical position (original position)
+    let imgVelocityY = 0; // Vertical velocity for the image
+    const gravity = 1; // Constant gravity
+    const jumpStrength = -15; // Jump strength
+
     // Original positions
     const originalBackgroundX = 0; // Original horizontal position for the background
     const originalBackgroundY = 0; // Original vertical position for the background
+    const originalImageX = 0; // Original horizontal position for the image
+    const originalImageY = 200; // Original vertical position for the image
 
     // Timer variables
-    let myClock01, myClock02, myClock04, myClock05; 
-    let mySpeed01 = 400, mySpeed02 = 400; // Background speeds
+    let myClock01, myClock02, myClock03, myClock04, myClock05, imgClock01, imgClock02, imgClock04, imgClock05; 
+    let mySpeed01 = 400, mySpeed02 = 400, mySpeedUp = 400, mySpeedDown = 400; // Background speeds
+    let imgSpeedLeft = 400, imgSpeedRight = 400, imgSpeedUp = 400, imgSpeedDown = 400; // Image speeds
 
     // Control state
     let controlMode = 'image'; // Start with the image being controlled
@@ -121,20 +84,57 @@
         document.getElementById('myBody').style.backgroundPosition = `${myGlobalX}px ${myGlobalY}px`;
     }
 
-    // Clear all intervals for movement
+    // Image movement functions
+    function moveImageLeft() {
+        imgGlobalX -= 5;
+        updateImagePosition();
+    }
+
+    function moveImageRight() {
+        imgGlobalX += 5;
+        updateImagePosition();
+    }
+
+    function moveImageUp() {
+        imgGlobalY -= 5;
+        updateImagePosition();
+    }
+
+    function moveImageDown() {
+        imgGlobalY += 5;
+        updateImagePosition();
+    }
+
+    function updateImagePosition() {
+        const imgElement = document.getElementById('myImage01');
+        imgElement.style.left = `${imgGlobalX}px`;
+        imgElement.style.top = `${imgGlobalY}px`;
+    }
+
+    // Clear all intervals
     function clearAllIntervals() {
         clearInterval(myClock01);
         clearInterval(myClock02);
+        clearInterval(myClock03);
+        clearInterval(myClock04);
+        clearInterval(myClock05);
+        clearInterval(imgClock01);
+        clearInterval(imgClock02);
+        clearInterval(imgClock04);
+        clearInterval(imgClock05);
     }
 
-    // Reset function for the background
+    // Reset function
     function resetPositions() {
         clearAllIntervals();  // Stop any auto movement
 
         myGlobalX = originalBackgroundX;
         myGlobalY = originalBackgroundY;
+        imgGlobalX = originalImageX;
+        imgGlobalY = originalImageY;
 
         updateBackgroundPosition();
+        updateImagePosition();
     }
 
     // Switch control between the image and background
@@ -146,7 +146,23 @@
 
     // Keydown event handler for arrow keys
     document.addEventListener('keydown', function(event) {
-        if (controlMode === 'background') {
+        if (controlMode === 'image') {
+            switch(event.key) {
+                case 'ArrowLeft':
+                    moveImageLeft();
+                    break;
+                case 'ArrowRight':
+                    moveImageRight();
+                    break;
+                case 'ArrowUp':
+                case 'Space':
+                    jump(); // Jump when Arrow Up or Space is pressed
+                    break;
+                case 'ArrowDown':
+                    moveImageDown();
+                    break;
+            }
+        } else if (controlMode === 'background') {
             switch(event.key) {
                 case 'ArrowLeft':
                     moveBackgroundLeft();
@@ -164,9 +180,39 @@
         }
     });
 
+    // Jump function for Flappy Bird Physics
+    function jump() {
+        imgVelocityY = jumpStrength; // Set the upward velocity for the jump
+    }
+
+    // Game loop for Flappy Bird Physics
+    function gameLoop() {
+        // Apply gravity to the image
+        imgVelocityY += gravity;
+        imgGlobalY += imgVelocityY;
+
+        // Prevent the image from going off the bottom of the screen
+        if (imgGlobalY >= window.innerHeight - 80) { // 80 is the height of the image
+            imgGlobalY = window.innerHeight - 80; // Reset to bottom
+            imgVelocityY = 0; // Stop falling
+        }
+        
+        // Prevent the image from going off the top of the screen
+        if (imgGlobalY < 0) {
+            imgGlobalY = 0;
+            imgVelocityY = 0; // Stop moving up
+        }
+
+        updateImagePosition(); // Update Position in the game loop
+        requestAnimationFrame(gameLoop); // Continue the loop
+    }
+
+    // Start the game loop
+    requestAnimationFrame(gameLoop);
+
 </script>
 
-<h1>Flappy Bird Clone</h1>
+<h1>Move Background and Image</h1>
 
 <!-- Control Toggle Section -->
 <div class="button-section">
@@ -174,9 +220,9 @@
     <p id="controlLabel">Control Mode: Image</p>
 </div>
 
-<!-- Horizontal Movement Section for Background -->
+<!-- Horizontal Movement Section -->
 <div class="button-section">
-    <h2>Background Horizontal Movement</h2>
+    <h2>Horizontal Movement</h2>
     <button onclick="moveBackgroundLeft()">Move Background Left</button>
     <button onclick="moveBackgroundRight()">Move Background Right</button>
     <button onclick="{
@@ -201,16 +247,85 @@
     }">Auto Background Right Slower</button>
 </div>
 
-<!-- Vertical Movement Section for Background -->
+<!-- Vertical Movement Section -->
 <div class="button-section">
-    <h2>Background Vertical Movement</h2>
+    <h2>Vertical Movement</h2>
     <button onclick="moveBackgroundUp()">Move Background Up</button>
+    <button onclick="{
+        clearInterval(myClock04);
+        mySpeedUp = Math.max(10, mySpeedUp - 30);
+        myClock04 = setInterval(moveBackgroundUp, mySpeedUp);
+    }">Auto Background Up Faster</button>
+    <button onclick="{
+        clearInterval(myClock04);
+        mySpeedUp += 30;
+        myClock04 = setInterval(moveBackgroundUp, mySpeedUp);
+    }">Auto Background Up Slower</button>
     <button onclick="moveBackgroundDown()">Move Background Down</button>
+    <button onclick="{
+        clearInterval(myClock05);
+        mySpeedDown = Math.max(10, mySpeedDown - 30);
+        myClock05 = setInterval(moveBackgroundDown, mySpeedDown);
+    }">Auto Background Down Faster</button>
+    <button onclick="{
+        clearInterval(myClock05);
+        mySpeedDown += 30;
+        myClock05 = setInterval(moveBackgroundDown, mySpeedDown);
+    }">Auto Background Down Slower</button>
+</div>
+
+<!-- Image Movement Section -->
+<div class="button-section">
+    <h2>Image Movement</h2>
+    <button onclick="moveImageLeft()">Move Image Left</button>
+    <button onclick="moveImageRight()">Move Image Right</button>
+    <button onclick="{
+        clearInterval(imgClock01);
+        imgSpeedLeft = Math.max(10, imgSpeedLeft - 30);
+        imgClock01 = setInterval(moveImageLeft, imgSpeedLeft);
+    }">Auto Image Left Faster</button>
+    <button onclick="{
+        clearInterval(imgClock01);
+        imgSpeedLeft += 30;
+        imgClock01 = setInterval(moveImageLeft, imgSpeedLeft);
+    }">Auto Image Left Slower</button>
+    <button onclick="{
+        clearInterval(imgClock02);
+        imgSpeedRight = Math.max(10, imgSpeedRight - 30);
+        imgClock02 = setInterval(moveImageRight, imgSpeedRight);
+    }">Auto Image Right Faster</button>
+    <button onclick="{
+        clearInterval(imgClock02);
+        imgSpeedRight += 30;
+        imgClock02 = setInterval(moveImageRight, imgSpeedRight);
+    }">Auto Image Right Slower</button>
+    <button onclick="moveImageUp()">Move Image Up</button>
+    <button onclick="{
+        clearInterval(imgClock04);
+        imgSpeedUp = Math.max(10, imgSpeedUp - 30);
+        imgClock04 = setInterval(moveImageUp, imgSpeedUp);
+    }">Auto Image Up Faster</button>
+    <button onclick="{
+        clearInterval(imgClock04);
+        imgSpeedUp += 30;
+        imgClock04 = setInterval(moveImageUp, imgSpeedUp);
+    }">Auto Image Up Slower</button>
+    <button onclick="moveImageDown()">Move Image Down</button>
+    <button onclick="{
+        clearInterval(imgClock05);
+        imgSpeedDown = Math.max(10, imgSpeedDown - 30);
+        imgClock05 = setInterval(moveImageDown, imgSpeedDown);
+    }">Auto Image Down Faster</button>
+    <button onclick="{
+        clearInterval(imgClock05);
+        imgSpeedDown += 30;
+        imgClock05 = setInterval(moveImageDown, imgSpeedDown);
+    }">Auto Image Down Slower</button>
 </div>
 
 <!-- Reset Button -->
 <div class="button-section">
-    <button onclick="resetPositions()">Reset Background Position</button>
+    <button onclick="resetPositions()">Reset Positions</button>
 </div>
 
 <!-- Image Element -->
