--- a/public/t2a19-move-background-aden.html
+++ b/public/t2a19-move-background-aden.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -42,6 +41,9 @@
     let myGlobalY = 0; // Global variable for background vertical position
     let imgGlobalX = 0; // Global variable for image horizontal position
     let imgGlobalY = 200; // Global variable for image vertical position (original position)
+    let imgVelocityY = 0; // Vertical velocity for the image
+    const gravity = 1; // Constant gravity
+    const jumpStrength = -15; // Jump strength
 
     // Original positions
     const originalBackgroundX = 0; // Original horizontal position for the background
@@ -145,22 +147,19 @@
     // Keydown event handler for arrow keys
     document.addEventListener('keydown', function(event) {
         if (controlMode === 'image') {
-            switch(event.key) {
+            switch (event.key) {
                 case 'ArrowLeft':
                     moveImageLeft();
                     break;
                 case 'ArrowRight':
                     moveImageRight();
                     break;
-                case 'ArrowUp':
-                    moveImageUp();
-                    break;
                 case 'ArrowDown':
                     moveImageDown();
                     break;
             }
         } else if (controlMode === 'background') {
-            switch(event.key) {
+            switch (event.key) {
                 case 'ArrowLeft':
                     moveBackgroundLeft();
                     break;
@@ -175,6 +174,41 @@
                     break;
             }
         }
+    });
+
+    // Jump function for Flappy Bird Physics
+    function jump() {
+        imgVelocityY = jumpStrength; // Set the upward velocity for the jump
+    }
+
+    // Game loop for Flappy Bird Physics
+    function gameLoop() {
+        // Apply gravity to the image
+        imgVelocityY += gravity;
+        imgGlobalY += imgVelocityY;
+
+        // Prevent the image from going off the bottom of the screen
+        if (imgGlobalY >= window.innerHeight - 80) { // 80 is the height of the image
+            imgGlobalY = window.innerHeight - 80; // Reset to bottom
+            imgVelocityY = 0; // Stop falling
+        }
+
+        // Prevent the image from going off the top of the screen
+        if (imgGlobalY < 0) {
+            imgGlobalY = 0;
+            imgVelocityY = 0; // Stop moving up
+        }
+
+        updateImagePosition(); // Update Position in the game loop
+        requestAnimationFrame(gameLoop); // Continue the loop
+    }
+
+    // Start the game loop
+    requestAnimationFrame(gameLoop);
+
+    // Mouse click event handler for jumping
+    document.addEventListener('click', function() {
+        jump(); // Trigger jump on mouse click
     });
 
 </script>
