--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,335 +1,187 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Move Background and Image</title>
+    <title>Spy Name Encryptor</title>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet"> <!-- Hacker-like font -->
     <style>
         body {
-            background-repeat: repeat;      /* Allow the background image to repeat */
-            background-size: auto;          /* Use auto for the background size to keep it repeating */
-            background-image: url('https://i.ibb.co/yXNJrzG/1247160.jpg');
+            font-family: 'Share Tech Mono', monospace; /* Use hacker-style font */
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            background-color: #000; /* Solid black background */
+            color: #00ff00; /* Bright green text */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
+        .container {
+            background-color: rgba(20, 20, 20, 0.9); /* Semi-transparent black */
+            border-radius: 10px;
+            box-shadow: 0 0 30px rgba(0, 255, 0, 0.8); /* Green glow around container */
+            padding: 30px;
+            max-width: 500px; /* Slightly smaller for sleekness */
+            width: 90%;
             text-align: center;
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            height: 100vh;                 /* Makes body full height of the viewport */
-            overflow: hidden;              /* Prevents scrollbar from appearing */
-            color: white;                  /* Sets general text color to white */
         }
-        #myImage01 {
-            position: absolute; 
-            width: 100px; 
-            height: 80px; 
-            z-index: 10; 
-            top: 200px;  /* Initial top position for the image */
-            left: 0;  /* Initial left position for the image */
+        h1 {
+            font-family: 'Share Tech Mono', monospace; /* Hacker-style font */
+            color: #00ff00; /* Neon green color */
+            margin-bottom: 30px;
+            text-shadow: 0 0 20px #00ff00; /* Glowing green text effect */
+            font-size: 2.5em;
         }
-        .button-section {
-            margin: 20px 0;
+        textarea {
+            width: 100%;
+            height: 100px; /* Increased height for better visibility */
+            font-size: 18px;
+            padding: 10px;
+            border: 2px solid #00ff00; /* Light green border */
+            border-radius: 5px;
+            color: #00ff00; /* Green text color */
+            background-color: #1b1b1b; /* Very dark background for contrast */
+            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5); /* Green glow effect */
+            transition: border-color 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
+            resize: none; /* Disable resize */
         }
-        button {
-            margin: 5px;
-            padding: 10px 15px;
+        textarea::placeholder {
+            color: rgba(0, 255, 0, 0.7); /* Dimmed placeholder color */
+        }
+        textarea:focus {
+            outline: none;
+            border-color: #00cc00; /* Lighter green border on focus */
+            box-shadow: 0 0 15px rgba(0, 204, 0, 0.8); /* Enhanced green glow */
+        }
+        .glitch {
+            animation: glitch-title 1s infinite; /* Glitch animation for title */
+        }
+        .glitch-textarea {
+            animation: glitch-textarea 0.5s infinite; /* Enhanced glitch animation for text areas */
+        }
+        .button-container {
+            display: flex; /* Use flexbox for button alignment */
+            justify-content: center; /* Center align the buttons */
+            margin: 10px 0; /* Add margin for spacing */
+        }
+        input[type=button] {
+            padding: 12px 20px;
             font-size: 16px;
+            margin: 0 5px; /* Add horizontal margin between buttons */
             cursor: pointer;
+            border: 2px solid #00ff00; /* Light green border */
+            border-radius: 5px;
+            background-color: #1a1a1a; /* Matching dark background */
+            color: #00ff00; /* Bright green text */
+            transition: background 0.3s, color 0.3s, transform 0.2s, box-shadow 0.2s; /* Smooth transitions */
+            box-shadow: 0 3px 10px rgba(0, 255, 0, 0.5); /* Green box shadow */
+        }
+        input[type=button]:hover {
+            background-color: #00ff00; /* Button background changes to green on hover */
+            color: black; /* Black text on hover */
+            transform: translateY(-2px); /* Lifting effect during hover */
+            box-shadow: 0 6px 20px rgba(0, 255, 0, 0.8); /* Enhanced green shadow on hover */
+        }
+        .terminal {
+            margin: 20px 0;
+            border-left: 4px solid #00ff00; /* Bold left border to mimic terminal */
+            padding-left: 15px;
+            text-align: left;
+        }
+        @keyframes glitch-title {
+            0% { opacity: 1; transform: translate(0); }
+            10% { opacity: 0.8; transform: translate(-2px, -2px); }
+            20% { opacity: 1; transform: translate(2px, -2px); }
+            30% { opacity: 0.9; transform: translate(-2px, 2px); }
+            40% { opacity: 1; transform: translate(2px, 2px); }
+            50% { opacity: 0.7; transform: translate(-2px, 0); }
+            60% { opacity: 1; transform: translate(0, -2px); }
+            70% { opacity: 0.9; transform: translate(2px, 2px); }
+            80% { opacity: 1; transform: translate(-2px, -2px); }
+            90% { opacity: 0.8; transform: translate(0); }
+            100% { opacity: 1; transform: translate(0); }
+        }
+        @keyframes glitch-textarea {
+            0% { opacity: 1; }
+            10% { opacity: 0.9; transform: skewX(-1deg); }
+            20% { opacity: 0.8; transform: skewX(1deg); }
+            30% { opacity: 0.9; transform: skewX(-2deg); }
+            40% { opacity: 0.8; }
+            50% { opacity: 1; }
+            60% { opacity: 0.8; transform: skewX(2deg); }
+            70% { opacity: 0.9; transform: skewX(-1deg); }
+            80% { opacity: 0.8; }
+            90% { opacity: 0.9; transform: skewX(1deg); }
+            100% { opacity: 1; }
         }
     </style>
 </head>
-<body id="myBody">
+<body>
+
+<div class="container">
+    <h1 class="glitch">Spy Name Encryptor</h1>
+    
+    <div class="terminal">
+        <textarea id="myArea01" placeholder="Enter your text here...">Hello, how are you?</textarea>
+    </div>
+
+    <div class="button-container">
+        <input type="button" value="Encrypt" onclick="encryptText()">
+        <input type="button" value="Reset" onclick="resetFields()">
+    </div>
+
+    <div class="terminal">
+        <textarea id="myArea02" placeholder="Your encrypted text will appear here..." class="glitch-textarea" readonly></textarea>
+    </div>
+
+    <input type="button" value="Decrypt" onclick="decryptText()"><br>
+
+    <div class="terminal">
+        <textarea id="myArea03" placeholder="Your decrypted text will appear here..." class="glitch-textarea" readonly></textarea>
+    </div>
+</div>
+
 <script>
-    let myGlobalX = 0; // Global variable for background horizontal position
-    let myGlobalY = 0; // Global variable for background vertical position
-    let imgGlobalX = 0; // Global variable for image horizontal position
-    let imgGlobalY = 200; // Global variable for image vertical position (original position)
-    let imgVelocityY = 0; // Vertical velocity for the image
-    const gravity = 1; // Constant gravity
-    const jumpStrength = -15; // Jump strength
-
-    // Original positions
-    const originalBackgroundX = 0; // Original horizontal position for the background
-    const originalBackgroundY = 0; // Original vertical position for the background
-    const originalImageX = 0; // Original horizontal position for the image
-    const originalImageY = 200; // Original vertical position for the image
-
-    // Timer variables
-    let myClock01, myClock02, myClock03, myClock04, myClock05, imgClock01, imgClock02, imgClock04, imgClock05; 
-    let mySpeed01 = 400, mySpeed02 = 400, mySpeedUp = 400, mySpeedDown = 400; // Background speeds
-    let imgSpeedLeft = 400, imgSpeedRight = 400, imgSpeedUp = 400, imgSpeedDown = 400; // Image speeds
-
-    // Control state
-    let controlMode = 'image'; // Start with the image being controlled
-
-    // Background movement functions
-    function moveBackgroundLeft() {
-        myGlobalX -= 5;
-        updateBackgroundPosition();
-    }
-
-    function moveBackgroundRight() {
-        myGlobalX += 5;
-        updateBackgroundPosition();
-    }
-
-    function moveBackgroundUp() {
-        myGlobalY -= 5;
-        updateBackgroundPosition();
-    }
-
-    function moveBackgroundDown() {
-        myGlobalY += 5;
-        updateBackgroundPosition();
-    }
-
-    function updateBackgroundPosition() {
-        document.getElementById('myBody').style.backgroundPosition = `${myGlobalX}px ${myGlobalY}px`;
-    }
-
-    // Image movement functions
-    function moveImageLeft() {
-        imgGlobalX -= 5;
-        updateImagePosition();
-    }
-
-    function moveImageRight() {
-        imgGlobalX += 5;
-        updateImagePosition();
-    }
-
-    function moveImageUp() {
-        imgGlobalY -= 5;
-        updateImagePosition();
-    }
-
-    function moveImageDown() {
-        imgGlobalY += 5;
-        updateImagePosition();
-    }
-
-    function updateImagePosition() {
-        const imgElement = document.getElementById('myImage01');
-        imgElement.style.left = `${imgGlobalX}px`;
-        imgElement.style.top = `${imgGlobalY}px`;
-    }
-
-    // Clear all intervals
-    function clearAllIntervals() {
-        clearInterval(myClock01);
-        clearInterval(myClock02);
-        clearInterval(myClock03);
-        clearInterval(myClock04);
-        clearInterval(myClock05);
-        clearInterval(imgClock01);
-        clearInterval(imgClock02);
-        clearInterval(imgClock04);
-        clearInterval(imgClock05);
-    }
-
-    // Reset function
-    function resetPositions() {
-        clearAllIntervals();  // Stop any auto movement
-
-        myGlobalX = originalBackgroundX;
-        myGlobalY = originalBackgroundY;
-        imgGlobalX = originalImageX;
-        imgGlobalY = originalImageY;
-
-        updateBackgroundPosition();
-        updateImagePosition();
-    }
-
-    // Switch control between the image and background
-    function toggleControl() {
-        controlMode = controlMode === 'image' ? 'background' : 'image';
-        const controlLabel = document.getElementById('controlLabel');
-        controlLabel.textContent = `Control Mode: ${controlMode.charAt(0).toUpperCase() + controlMode.slice(1)}`;
-    }
-
-    // Keydown event handler for arrow keys
-    document.addEventListener('keydown', function(event) {
-        if (controlMode === 'image') {
-            switch (event.key) {
-                case 'ArrowLeft':
-                    moveImageLeft();
-                    break;
-                case 'ArrowRight':
-                    moveImageRight();
-                    break;
-                case 'ArrowDown':
-                    moveImageDown();
-                    break;
+    function encryptText() {
+        let myTemp = '';
+        let myString = document.getElementById('myArea01').value.toLowerCase().split('');
+        for (let myLoop = 0; myLoop < myString.length; myLoop++) {
+            myTemp = myString[myLoop];
+            if (myString[myLoop] === 'e') {
+                myTemp = 'f';
+            } else if (myString[myLoop] === 'h') {
+                myTemp = 'i';
             }
-        } else if (controlMode === 'background') {
-            switch (event.key) {
-                case 'ArrowLeft':
-                    moveBackgroundLeft();
-                    break;
-                case 'ArrowRight':
-                    moveBackgroundRight();
-                    break;
-                case 'ArrowUp':
-                    moveBackgroundUp();
-                    break;
-                case 'ArrowDown':
-                    moveBackgroundDown();
-                    break;
+            myString[myLoop] = myTemp;
+        }
+        document.getElementById('myArea02').value = myString.join('');
+    }
+
+    function decryptText() {
+        let myTemp = '';
+        let myString = document.getElementById('myArea02').value.toLowerCase().split('');
+        for (let myLoop = 0; myLoop < myString.length; myLoop++) {
+            myTemp = myString[myLoop];
+            if (myString[myLoop] === 'f') {
+                myTemp = 'e';
+            } else if (myString[myLoop] === 'i') {
+                myTemp = 'h';
             }
+            myString[myLoop] = myTemp;
         }
-    });
-
-    // Jump function for Flappy Bird Physics
-    function jump() {
-        imgVelocityY = jumpStrength; // Set the upward velocity for the jump
+        document.getElementById('myArea03').value = myString.join('');
     }
 
-    // Game loop for Flappy Bird Physics
-    function gameLoop() {
-        // Apply gravity to the image
-        imgVelocityY += gravity;
-        imgGlobalY += imgVelocityY;
-
-        // Prevent the image from going off the bottom of the screen
-        if (imgGlobalY >= window.innerHeight - 80) { // 80 is the height of the image
-            imgGlobalY = window.innerHeight - 80; // Reset to bottom
-            imgVelocityY = 0; // Stop falling
-        }
-
-        // Prevent the image from going off the top of the screen
-        if (imgGlobalY < 0) {
-            imgGlobalY = 0;
-            imgVelocityY = 0; // Stop moving up
-        }
-
-        updateImagePosition(); // Update Position in the game loop
-        requestAnimationFrame(gameLoop); // Continue the loop
+    function resetFields() {
+        document.getElementById('myArea01').value = ''; // Clear input field
+        document.getElementById('myArea02').value = ''; // Clear encrypted output field
+        document.getElementById('myArea03').value = ''; // Clear decrypted output field
     }
-
-    // Start the game loop
-    requestAnimationFrame(gameLoop);
-
-    // Mouse click event handler for jumping
-    document.addEventListener('click', function() {
-        jump(); // Trigger jump on mouse click
-    });
-
 </script>
 
-<h1>Move Background and Image</h1>
-
-<!-- Control Toggle Section -->
-<div class="button-section">
-    <button onclick="toggleControl()">Toggle Control (Image/Background)</button>
-    <p id="controlLabel">Control Mode: Image</p>
-</div>
-
-<!-- Horizontal Movement Section -->
-<div class="button-section">
-    <h2>Horizontal Movement</h2>
-    <button onclick="moveBackgroundLeft()">Move Background Left</button>
-    <button onclick="moveBackgroundRight()">Move Background Right</button>
-    <button onclick="{
-        clearInterval(myClock01);
-        mySpeed01 = Math.max(10, mySpeed01 - 30);
-        myClock01 = setInterval(moveBackgroundLeft, mySpeed01);
-    }">Auto Background Left Faster</button>
-    <button onclick="{
-        clearInterval(myClock01);
-        mySpeed01 += 30;
-        myClock01 = setInterval(moveBackgroundLeft, mySpeed01);
-    }">Auto Background Left Slower</button>
-    <button onclick="{
-        clearInterval(myClock02);
-        mySpeed02 = Math.max(10, mySpeed02 - 30);
-        myClock02 = setInterval(moveBackgroundRight, mySpeed02);
-    }">Auto Background Right Faster</button>
-    <button onclick="{
-        clearInterval(myClock02);
-        mySpeed02 += 30;
-        myClock02 = setInterval(moveBackgroundRight, mySpeed02);
-    }">Auto Background Right Slower</button>
-</div>
-
-<!-- Vertical Movement Section -->
-<div class="button-section">
-    <h2>Vertical Movement</h2>
-    <button onclick="moveBackgroundUp()">Move Background Up</button>
-    <button onclick="{
-        clearInterval(myClock04);
-        mySpeedUp = Math.max(10, mySpeedUp - 30);
-        myClock04 = setInterval(moveBackgroundUp, mySpeedUp);
-    }">Auto Background Up Faster</button>
-    <button onclick="{
-        clearInterval(myClock04);
-        mySpeedUp += 30;
-        myClock04 = setInterval(moveBackgroundUp, mySpeedUp);
-    }">Auto Background Up Slower</button>
-    <button onclick="moveBackgroundDown()">Move Background Down</button>
-    <button onclick="{
-        clearInterval(myClock05);
-        mySpeedDown = Math.max(10, mySpeedDown - 30);
-        myClock05 = setInterval(moveBackgroundDown, mySpeedDown);
-    }">Auto Background Down Faster</button>
-    <button onclick="{
-        clearInterval(myClock05);
-        mySpeedDown += 30;
-        myClock05 = setInterval(moveBackgroundDown, mySpeedDown);
-    }">Auto Background Down Slower</button>
-</div>
-
-<!-- Image Movement Section -->
-<div class="button-section">
-    <h2>Image Movement</h2>
-    <button onclick="moveImageLeft()">Move Image Left</button>
-    <button onclick="moveImageRight()">Move Image Right</button>
-    <button onclick="{
-        clearInterval(imgClock01);
-        imgSpeedLeft = Math.max(10, imgSpeedLeft - 30);
-        imgClock01 = setInterval(moveImageLeft, imgSpeedLeft);
-    }">Auto Image Left Faster</button>
-    <button onclick="{
-        clearInterval(imgClock01);
-        imgSpeedLeft += 30;
-        imgClock01 = setInterval(moveImageLeft, imgSpeedLeft);
-    }">Auto Image Left Slower</button>
-    <button onclick="{
-        clearInterval(imgClock02);
-        imgSpeedRight = Math.max(10, imgSpeedRight - 30);
-        imgClock02 = setInterval(moveImageRight, imgSpeedRight);
-    }">Auto Image Right Faster</button>
-    <button onclick="{
-        clearInterval(imgClock02);
-        imgSpeedRight += 30;
-        imgClock02 = setInterval(moveImageRight, imgSpeedRight);
-    }">Auto Image Right Slower</button>
-    <button onclick="moveImageUp()">Move Image Up</button>
-    <button onclick="{
-        clearInterval(imgClock04);
-        imgSpeedUp = Math.max(10, imgSpeedUp - 30);
-        imgClock04 = setInterval(moveImageUp, imgSpeedUp);
-    }">Auto Image Up Faster</button>
-    <button onclick="{
-        clearInterval(imgClock04);
-        imgSpeedUp += 30;
-        imgClock04 = setInterval(moveImageUp, imgSpeedUp);
-    }">Auto Image Up Slower</button>
-    <button onclick="moveImageDown()">Move Image Down</button>
-    <button onclick="{
-        clearInterval(imgClock05);
-        imgSpeedDown = Math.max(10, imgSpeedDown - 30);
-        imgClock05 = setInterval(moveImageDown, imgSpeedDown);
-    }">Auto Image Down Faster</button>
-    <button onclick="{
-        clearInterval(imgClock05);
-        imgSpeedDown += 30;
-        imgClock05 = setInterval(moveImageDown, imgSpeedDown);
-    }">Auto Image Down Slower</button>
-</div>
-
-<!-- Reset Button -->
-<div class="button-section">
-    <button onclick="resetPositions()">Reset Positions</button>
-</div>
-
-<!-- Image Element -->
-<img id="myImage01" src="https://i.ibb.co/Zf7hHsh/OIP.jpg" alt="OIP">
 </body>
 </html>
